<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_password"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/item_password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_toStartOf="@id/ib_mas_opciones"
                android:layout_toEndOf="@+id/img_item_password"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/item_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_Titulo"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/item_cuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_Cuenta" />

                <TextView
                    android:id="@+id/item_nombre_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_nombre_usuario"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/item_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_Password"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/item_sitio_web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_Sitio_Web"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/item_nota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_Nota"
                    android:visibility="gone" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_mas_opciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:src="@drawable/icono_mas_opciones" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>