<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="match_parent"
        tools:context=".OpcionesPassword.AgregarPassword">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/EtTitulo"
                    android:id="@+id/EtTitulo"
                    android:inputType="textCapWords|text"
                    android:textSize="25sp"
                    android:text="Credi Si"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/EtCuenta"
                    android:id="@+id/EtCuenta"
                    android:inputType="textEmailAddress"
                    android:text="cuenta@gmail.com"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/EtNombreUsuario"
                    android:id="@+id/EtNombreUsuario"
                    android:inputType="textCapWords|text"
                    android:textSize="18sp"
                    android:text="Axel"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/EtPassword"
                    android:id="@+id/EtPassword"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:text="123456"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/EtSitioWeb"
                    android:id="@+id/EtSitioWeb"
                    android:inputType="textWebEmailAddress"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:text="www.laweb.com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/EtNota"
                    android:id="@+id/EtNota"
                    android:height="150dp"
                    android:gravity="start"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</layout>